# DevDocs

./: .env.template  .gitignore  Dockerfile.backend  Dockerfile.frontend  Dockerfile.mcp  README.md  check_mcp_health.sh  claude_mcp_settings.json  docker-compose.yml  docker-start.bat  docker-start.sh  docker-strategy.md  next.config.mjs  package-lock.json  package.json  restart_and_test_mcp.sh  start.bat  start.ps1  start.sh  test_crawl4ai.py
app/: page.tsx
backend/: requirements.txt
backend/app/: config.py  crawler.py  main.py
cleanup_results/: completely_empty_dirs.txt  empty_folders_analysis.md  empty_folders_report.md  keep_with_gitkeep.txt  nested_empty_dirs.txt  potential_abandoned_dirs.txt  safe_to_remove.txt
components/: ConfigSettings.tsx  DebugOutput.tsx  DiscoveredFiles.tsx  MCPServerStatus.tsx  MarkdownOutput.tsx  ProcessingBlock.tsx  StoredFiles.tsx  SubdomainList.tsx  UrlInput.tsx
config/: next.config.mjs
docker/compose/: docker-compose.yml
docker/dockerfiles/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.mcp
docs/docker/: DOCKER_README.md  docker-strategy.md  docker_implementation_plan.md
docs/general/: codebase_reorganization_summary.md  empty_folders_cleanup_plan.md  in_memory_files_plan.md
docs/mcp/: MCP_DOCKER_SETUP.md  docker_mcp_integration_plan.md
fast-markdown-mcp/: README_MCP.md  pyproject.toml  setup.bat  setup.sh
fast-markdown-mcp/src/fast_markdown_mcp/: __init__.py  document_structure.py  server.py
lib/: crawl-service.ts  storage.ts  types.ts
scripts/docker/: docker-start.bat  docker-start.sh
(+68 files in other folders)
